--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -1,10 +1,32 @@
-<h1>Classrooms</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand"><b class="text-info">Student Behavior Tracker</b></a>
+    </div>
+  </div>
+</nav>
+
+<div class="jumbotron">
+  <h1>Classrooms</h1>
+</div>
+
 
 <ul>
 <% @classrooms.each do |classroom| %>
-  <li>
-  <%= link_to classroom.teacher, classroom_path(classroom) %>
+  <ul>
+  <br><%= link_to classroom.teacher, classroom_path(classroom), class: "btn btn-info" %><br>
   <%= classroom.room %>
-  </li>
-  <% end %>
 </ul>
+  <% end %>
+</ul><br>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+
+        <p class="text-success">Search by Student</p><input type="text" class="form-control" placeholder="Search"><button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </form>
+  </div>
+</nav>
