--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,8 +1,34 @@
-<h1><%= @classroom.teacher %></h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+      <a class="navbar-brand"> <h3 class="text-info">Student Behavior Tracker</h3></a>
+      <ul class="nav navbar-nav navbar-right">
+              <h4 class="btn-group"><%= link_to "Return to all Classrooms", classrooms_path, class: "btn btn-success" %></h4>
+            </ul>
+  </div>
+</nav>
 
-<h3>Students:</h3>
-  <% @classroom.students.each do |student|  %>
-    <li><%= link_to student.name, classroom_student_path(student) %></li>
+<div class="jumbotron">
+  <div class="container-fluid">
+    <h1>Classroom: <%= @classroom.teacher %></h1>
+  </div>
+</div><br><br>
+
+
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th class="text-info">#</th>
+      <th class="text-info">Student Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @classroom.students.each_with_index do |student, index|  %>
+      <tr>
+        <td><%= index + 1 %></td>
+
+    <td><%= link_to student.name, classroom_student_path(student) %></td>
+
     <% end %>
-
-    <h4><%= link_to "Return to all Classrooms", classrooms_path %></h4>
+  </tr>
+  </tbody>
+  </table>
