build users, sessions, and login pages

--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -1,10 +1,13 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand"><b class="text-info">Student Behavior Tracker</b></a>
+      <a class="navbar-brand"><p class="text-info">Student Behavior Tracker</p></a>
+        <h3 class="nav navbar-nav navbar-right"><%= link_to "List of Behaviors", behaviors_path, class: "btn btn-success" %></h3>
     </div>
   </div>
 </nav>
+
+
 
 <div class="jumbotron">
   <h1>Classrooms</h1>
@@ -28,5 +31,13 @@
         <p class="text-success">Search by Student</p><input type="text" class="form-control" placeholder="Search"><button type="submit" class="btn btn-default">Submit</button>
       </div>
     </form>
+
   </div>
 </nav>
+
+
+<div class="container-fluid">
+    <ul class="nav navbar-nav navbar-center">
+    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-danger" %>
+  </ul>
+</div>
