--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -32,3 +32,10 @@
   </tr>
   </tbody>
   </table>
+
+
+    <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-center">
+        <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-danger" %>
+      </ul>
+    </div>
