--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <%= flash.each do |type, msg| %>
+    <%= content_tag :div, msg, class: "flash_#{type}" %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
