--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
       <a class="navbar-brand"> <h3 class="text-info">Student Behavior Tracker</h3></a>
@@ -16,19 +14,19 @@
 <h1>Name: <%= @student.name %></h1>
 <h4>Teacher: <%= @student.classroom.teacher %></h4><br>
 
-<% behaviors = @student.student_target_behaviors.map { |tb| @behaviors.find(tb.behavior_id).keyword } %>
-<% descrptions = @student.student_target_behaviors.map { |tb| tb.student_specific_description } %>
+<% target_behaviors = @student.student_target_behaviors.map { |tb| @behaviors.find(tb.behavior_id).keyword } %>
+<% target_behavior_descrptions = @student.student_target_behaviors.map { |tb| tb.student_specific_description } %>
 
 
 <div class="panel panel-info">
   <div class="panel-heading">
     <h3 class="panel-title">TARGET BEHAVIOR 1:
-      <% behaviors. each do |behavior| %>
+      <% target_behaviors.each do |behavior| %>
     <%= behavior %>
     <% end %></h3>
   </div>
   <div class="panel-body">
-    <% descrptions.each do |description| %>
+    <% target_behavior_descrptions.each do |description| %>
     <%= description %>
     <% end %>
   </div>
@@ -47,8 +45,6 @@
 
 
 
-<h3>Tracked behaviors:</h3>
 
 
-
-<h3>Record behavior:</h3>
+<h3>Record behavior <%= button_to "New observation", new_classroom_student_observation_path(@classroom, @student), class: "btn btn-warning" %></h3>
