observation views work...

--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -21,6 +21,7 @@
   <%= classroom.room %>
 </ul>
   <% end %>
+  <!--EDIT/DELET classroom (deletes all students, and students' records)  -->
 </ul><br>
 
 <nav class="navbar navbar-default">
