--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -29,6 +29,7 @@
     <td><%= link_to student.name, classroom_student_path(student) %></td>
 
     <% end %>
+    <!-- EDIT/DELETE Student -->
   </tr>
   </tbody>
   </table>
