--- a/app/views/observations/_form.html.erb
+++ b/app/views/observations/_form.html.erb
@@ -1,25 +1,38 @@
-<%= form_for (@classroom, @student, @observation) do |f| %>
+<form class="form-horizontal">
+  <fieldset>
+    <legend>Record Observation</legend>
+      <%= form_for (@classroom, @student, @observation) do |f| %>
+      <div class="form-group">
+        <label for="select" class="col-lg-2 control-label"><%= f.label :behavior_id, 'Behavior' %></label>
+          <div class="col-lg-10">
+              <select class="form-control" id="select"><%= f.collection_select(:behavior_id, Behavior.all, :id, :name, :include_blank => "Other behavior") %>
+              </select>
+            </div>
+          </div>  
 
-<%= f.label :behavior_id, 'Behavior' %>
-<%= f.collection_select(:behavior_id, Behavior.all, :id, :name, :include_blank => "Other behavior") %>
 
-<%= f.label :date %>
-<%= f.select_date :date %>
 
-<%= f.label :time %>
-<%= f.time :time %>
 
-<%= f.label :duration %>
-<%= f.text_field :duration %>
+        <%= f.label :behavior_id, 'Behavior' %>
+        <%= f.collection_select(:behavior_id, Behavior.all, :id, :name, :include_blank => "Other behavior") %>
 
-<%= f.label :location %>
-<%= f.text_field :location %>
+        <%= f.label :date %>
+        <%= f.select_date :date %>
 
-<%= f.label :logged_by %>
-<%= f.text_field :logged_by %>
+        <%= f.label :time %>
+        <%= f.time :time %>
 
-<%= f.label :comments %>
-<%= f.text_area :comments %>
+        <%= f.label :duration %>
+        <%= f.text_field :duration %>
 
-<%= f.submit %>
-<% end %>
+        <%= f.label :location %>
+        <%= f.text_field :location %>
+
+        <%= f.label :logged_by %>
+        <%= f.text_field :logged_by %>
+
+        <%= f.label :comments %>
+        <%= f.text_area :comments %>
+
+        <%= f.submit %>
+        <% end %>
