--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -15,23 +15,33 @@
 <h4>Teacher: <%= @student.classroom.teacher %></h4><br>
 
 <% target_behaviors = @student.student_target_behaviors.map { |tb| @behaviors.find(tb.behavior_id).keyword } %>
-<% target_behavior_descrptions = @student.student_target_behaviors.map { |tb| tb.student_specific_description } %>
+<% target_behavior_descriptions = @student.student_target_behaviors.map { |tb| tb.student_specific_description } %>
 
 
-<div class="panel panel-info">
-  <div class="panel-heading">
-    <h3 class="panel-title">TARGET BEHAVIOR 1:
-      <% target_behaviors.each do |behavior| %>
-    <%= behavior %>
-    <% end %></h3>
-  </div>
-  <div class="panel-body">
-    <% target_behavior_descrptions.each do |description| %>
-    <%= description %>
-    <% end %>
-  </div>
+
+
+
+
+<div class='col-md-4'>
+
+<table class="panel panel-info">
+  <tbody>
+    <tr class="panel-heading">
+      <th class="panel-title"> <% target_behaviors.each  do |behavior| %>
+        <%= "TARGET BEHAVIOR: #{behavior}" %>
+      <% end %></th>
+    </tr>
+    <tr class="panel-body">
+    <%= target_behavior_descriptions.each do |description| %>
+
+      <td><%=  description  %></td>
+      <% end  %></tr>
+    <!-- EDIT/DELETE Student -->
+
+  </tbody>
+  </table>
+
 </div>
-
 
 
 <div class="panel panel-info">
@@ -47,4 +57,4 @@
 
 
 
-<h3>Record behavior <%= button_to "New observation", new_classroom_student_observation_path(@classroom, @student), class: "btn btn-warning" %></h3>
+<h3>Record behavior <%= link_to "New observation", new_classroom_student_observation_path(@classroom, @student), class: "btn btn-warning" %></h3>
