--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+// @import "bootstrap-sprockets";
+ // @import "bootstrap";
+
+ @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700")
