--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -2,25 +2,23 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand"><p class="text-info">Student Behavior Tracker</p></a>
-        <h3 class="nav navbar-nav navbar-right"><%= link_to "List of Behaviors", behaviors_path, class: "btn btn-success" %></h3>
+        <h3 class="nav navbar-nav navbar-right"><%= link_to "List of Behaviors", admin_behaviors_path, class: "btn btn-success" %></h3>
     </div>
   </div>
 </nav>
-
 
 
 <div class="jumbotron">
   <h1>Classrooms</h1>
 </div>
 
-
 <ul>
 <% @classrooms.each do |classroom| %>
-  <ul>
-  <br><%= link_to classroom.teacher, classroom_path(classroom), class: "btn btn-info" %><br>
-  <%= classroom.room %>
-</ul>
-  <% end %>
+  <ul><br>
+    <%= link_to classroom.teacher, classroom_path(classroom), class: "btn btn-info" %><br>
+    <%= classroom.room %>
+  </ul>
+<% end %>
   <!--EDIT/DELET classroom (deletes all students, and students' records)  -->
 </ul><br>
 
